--- a/mobile-new-app/app.json
+++ b/mobile-new-app/app.json
@@ -1,19 +1,17 @@
 {
   "expo": {
-    "name": "FitnessTracker",
-    "slug": "fitness-tracker",
+    "name": "mobile-new-app",
+    "slug": "mobile-new-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "fitness-tracker",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -23,11 +21,10 @@
         "backgroundColor": "#ffffff"
       }
     },
-    "plugins": [
-      "expo-router"
-    ],
-    "experiments": {
-      "typedRoutes": true
-    }
+    "web": {
+      "favicon": "./assets/favicon.png"
+    },
+    "scheme": "mobile-new-app",
+    "plugins": ["expo-router"]
   }
 }
