--- a/mobile-new-app/package.json
+++ b/mobile-new-app/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "mobile",
+  "name": "mobile-new-app",
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
-    "ios": "expo start --ios"
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "axios": "^1.6.7",
-    "expo": "~50.0.5",
-    "expo-constants": "~15.4.5",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.6",
+    "expo": "~52.0.35",
+    "expo-constants": "~17.0.6",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
     "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.2",
+    "expo-status-bar": "~2.0.1",
+    "react": "18.3.1",
+    "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.1",
     "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.3.0"
+    "@babel/core": "^7.25.2",
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
